--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "printrgb"
-version = "1.1.7"
+version = "1.1.8"
 description = "Print rainbow text in terminal with true-color"
 readme = "README.md"
 license = {file = "LICENSE"}
@@ -20,7 +20,8 @@ requires-python = ">=3.10"
 [project.scripts]
 printrgb = "printrgb.__main__:main"
 
-
+[tool.setuptools.package-data]
+printrgb = ["py.typed", "*.pyi"]
 
 
 [project.urls]
